--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,14 @@
   margin: 0;
   padding: 0;
 }
+html {
+  overflow-x: hidden;
+}
 body {
   height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Montserrat;
   line-height: 1.6;
+  
 }
 .container {
   max-width: 1000px;
@@ -246,6 +250,57 @@ body {
 }
 
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
+.services {
+  background-color: #333;
+  color: black;
+  padding: 40px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.services h2 {
+  width: 100%;
+  color: aliceblue;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.services .service {
+  flex-basis: calc(33.33% - 40px);
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.services .service img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.services .service h3 {
+  margin-bottom: 10px;
+}
+
+.services .service p {
+  font-style: italic;
+}
+
+@media (max-width: 600px) {
+  .services .service {
+    flex-basis: 90%;
+  }
+}
+
+
+
+/* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 
 .contact {
   background-color: #0f0f0f;
@@ -322,6 +377,55 @@ body {
   background-color: #444;
   color: #fff;
 }
+
+/* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
+
+.opinions {
+  background-color: #fff;
+  color: #333;
+  padding: 40px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.opinions h2 {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.opinions .opinion {
+  flex-basis: calc(33.33% - 40px);
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+/* .opinions .opinion img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+} */
+
+.opinions .opinion h3 {
+  margin-bottom: 10px;
+}
+
+.opinions .opinion p {
+  font-style: italic;
+}
+
+@media (max-width: 600px) {
+  .opinions .opinion {
+    flex-basis: 90%;
+  }
+}
+
 
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 
