--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ html {
   overflow-x: hidden;
 }
 body {
-  height: 100vh;
   font-family: Montserrat;
   line-height: 1.6;
   
@@ -199,13 +198,14 @@ body {
   background-color: #f3efef;
   background-size: cover;
   background-position: center;
-  height: 800px;
+  height: 860px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: #080707;
 }
 .about-container {
+  padding-top: 60px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -238,7 +238,7 @@ body {
 
 .about .btn {
   background-color: #130c0c;
-  color: #444;
+  color: aliceblue;
   padding: 15px 30px;
   font-weight: bold;
   transition: all 0.3s ease;
@@ -259,9 +259,15 @@ body {
   justify-content: center;
 }
 
+.services-container {
+  padding-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
 
-.services h2 {
+.services h1 {
   width: 100%;
+  font-size: 48px;
   color: aliceblue;
   text-align: center;
   margin-bottom: 30px;
@@ -389,10 +395,19 @@ body {
   justify-content: center;
 }
 
-.opinions h2 {
+.opinions-container {
+  
+  padding-top: 30px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.opinions h1 {
   width: 100%;
+  font-size: 48px;
+  color: black;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .opinions .opinion {
@@ -434,7 +449,7 @@ footer {
   align-items: center;
   text-align: center;
   padding-top: 20px;
-  height: 50px;
+  height: 500px;
 }
 
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
