--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
 }
 :root {
   --navbar-font: Montserrat;
-  --navbar-bg-color: hsl(0, 0%, 15%);
+
+  --navbar-bg-color: #0f0f0f;
   --navbar-text-color: hsl(0, 0%, 85%);
   --navbar-text-color-focus: white;
   --navbar-bg-contrast: hsl(0, 0%, 25%);
@@ -31,6 +32,10 @@ body {
 }
 
 .section-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
   font-family: Montserrat;
 }
 
@@ -54,7 +59,7 @@ body {
 }
 .navbar-item {
   margin: 0.4em;
-  width: 100%;
+  /* width: 100%; */
 }
 
 .home-link,
@@ -65,6 +70,14 @@ body {
   font-weight: 400;
   align-items: center;
 }
+
+#wpp {
+  color: green;
+  border: 2px solid green;
+  font-weight: bold;
+  visibility: visible;
+}
+
 
 .home-link:is(:focus, :hover) {
   color: var(--navbar-text-color-focus);
@@ -183,6 +196,13 @@ body {
   margin-bottom: 40px;
 }
 
+.hero-buttons{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
 .hero .btn {
   background-color: #fff;
   color: #444;
@@ -191,10 +211,31 @@ body {
   transition: all 0.3s ease;
 }
 
+.hero .btn-wpp {
+  padding: 15px 30px;
+  margin-top: 20px;
+  background-color: transparent;
+  text-decoration: none;
+  color: green;
+  border: 2px solid green;
+  border-radius: 0%;
+  font-size: 15px;
+  font-weight: bold;
+}
+.hero .btn-wpp:hover {
+  background-color: #f3efef;
+}
+.hero .btn-wpp i {
+  padding-left: 10px ;
+  font-size: 20px;
+
+}
+
 .hero .btn:hover {
   background-color: #444;
   color: #fff;
 }
+
 
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 
@@ -255,7 +296,7 @@ body {
 
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 .services {
-  background-color: #333;
+  background-color: #0f0f0f;
   color: black;
   padding: 40px 0;
   display: flex;
@@ -354,15 +395,17 @@ form {
 }
 
 #contact input[type="submit"] {
-	background-color: #333;
-	color: #fff;
-	padding: 10px 15px;
-	border: none;
-	cursor: pointer;
+  letter-spacing: 1px;
+  background-color: #fff;
+  color: #444;
+  padding: 15px 50px;
+  font-weight: bold;
+  transition: all 0.3s ease;
 }
 
 #contact input[type="submit"]:hover {
-	background-color: #555;
+  background-color: #444;
+  color: #fff;
 }
 
 .contact h1 {
@@ -374,14 +417,14 @@ form {
   font-size: 24px;
   margin-bottom: 40px;
 }
-
+/* 
 .contact .btn {
   background-color: #fff;
   margin: auto;
   color: #444;
   font-weight: bold;
   transition: all 0.3s ease;
-}
+} */
 
 .contact .btn:hover {
   background-color: #444;
@@ -521,6 +564,13 @@ form {
     width: 100%;
     height: 100%;
   }
+
+  #wpp {
+  color: green;
+  border: 2px solid green;
+  font-weight: bold;
+  visibility: hidden;
+}
   
   .card-one,
   .card-two {
