--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,15 @@
   font-family: montserrat;
   src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
 }
+
 @font-face {
   font-family: montserrat-italic;
   src: url(../fonts/Montserrat/Montserrat-Italic-VariableFont_wght.ttf);
 }
+
 :root {
   --body-primary-font: Montserrat;
-  --section-height:100vh;
+  --section-height: 100vh;
   --navbar-font: Montserrat;
   --navbar-height: 64px;
   --navbar-bg-color: #0f0f0f;
@@ -21,22 +23,49 @@
 /* Reset default browser styles */
 
 * {
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-  }
-  
-  /* Set basic typography */
-  body {
-    font-family: var(--body-primary-font); 
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-  }
-  .container {
-    max-width: 1000px;
-    margin: 0 auto;
-    margin-bottom: 64px;
-    padding: 20px;
-  }
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+}
+
+/* Set basic typography */
+body {
+  font-family: var(--body-primary-font);
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+  background-position: center;
+  background-color: #0f0f0f;
+  background-size: cover;
+  color: #fff;
+}
+
+.footer-container {
+  flex-wrap: wrap;
+}
+
+.copyright {
+  height: 10rem;
+  width: 100%;
+  padding-top: 5rem;
+  color: #fff;
+  font-size: 20px;
+  letter-spacing: 0.2rem;
+  font-weight: 300;
+  text-align: center;
+}
