--- a/css/hero.css
+++ b/css/hero.css
@@ -1,35 +1,41 @@
 .hero {
     height: var(--section-height);
-    background-color: #0f0f0f;
+    background-color: var(--color-three);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #fff;
+    font-family: "Cormorant", Sans-serif;
+    line-height: 1;
+    
 }
 
 .hero h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
+    color: var(--color-five);
+    font-size: 20px;
+    font-weight: 800;
+    margin-bottom: 30px;
 }
 
 .hero p {
-    font-size: 24px;
-    margin-bottom: 40px;
+    color: var(--color-four);
+    font-size: 18px;
+    margin-bottom: 70px;
 }
 
 
 .hero .btn {
-    background-color: #fff;
-    color: #444;
+    font-family: montserrat;
+    text-decoration: none;
+    background-color: var(--color-five);
+    color: #fff;
     padding: 15px 30px;
-    font-weight: bold;
     transition: all 0.3s ease;
 }
 
 
 .hero .btn:hover {
-    background-color: #444;
+    background-color: var(--color-four);
     color: #fff;
 }
