--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,27 @@
   src: url(../fonts/Montserrat/Montserrat-Italic-VariableFont_wght.ttf);
 }
 
+@font-face {
+  font-family: Cormorant;
+  src: url(../fonts/Cormorant/Cormorant-VariableFont_wght.ttf);
+}
+
 :root {
   --body-primary-font: Montserrat;
+
+  --color-one:#F9F3E5;
+  --color-two:#350713;
+  --color-three: #FFFFFF;
+  --color-four: #977018;
+  --color-five:#821E36;
+
   --section-height: 100vh;
   --navbar-font: Montserrat;
-  --navbar-height: 64px;
-  --navbar-bg-color: #0f0f0f;
+  --navbar-height: 100px;
+  --navbar-bg-color: #350713;
   --navbar-text-color: hsl(0, 0%, 85%);
   --navbar-text-color-focus: white;
   --navbar-bg-contrast: hsl(0, 0%, 25%);
-
 }
 
 /* Reset default browser styles */
