--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,20 @@ body {
   font-family: Cormorant;
 }
 
+.scale {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.scale img {
+  padding: 0 1rem;
+  height: 21px;
+  fill: black;
+}
+
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 
 #navbar {
@@ -284,30 +298,12 @@ body {
 .about-container h1 {
  color: #821E36;
  font-weight: 600;
+ font-size: 48px;
+ margin-bottom: 20px;
 }
 
-/* .card-one {
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  
-}
-
-.card-two {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.square {
-  background-color: black;
-  height: 100%;
-  width: 80%;
-} */
-
-.about h1 {
-  font-size: 48px;
-  margin-bottom: 20px;
+.about hr {
+  width: 3rem;
 }
 
 .about h3 {
@@ -338,7 +334,7 @@ body {
 .services {
   background-color: white;
   color: rgb(53, 7, 19);
-  height: 100vh;
+  height: auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -355,6 +351,9 @@ body {
   font-size: 48px;
   text-align: center;
   margin-bottom: 30px;
+  color: #821E36;
+  font-weight: 600;
+
 }
 
 .services .service {
@@ -368,18 +367,21 @@ body {
 }
 
 .services .service img {
-  width: 100px;
+  width: 70px;
   height: 100px;
-  border-radius: 50%;
   margin-bottom: 10px;
 }
 
 .services .service h3 {
   margin-bottom: 10px;
+  color: black;
+  font-weight: 500;
+  font-family: Montserrat;
 }
 
 .services .service p {
-  font-style: italic;
+  font-family: Montserrat;
+  color: #821E36;
 }
 
 @media (max-width: 600px) {
