--- a/styles.css
+++ b/styles.css
@@ -306,13 +306,13 @@ body {
   color: #080707;
 }
 .about-container {
-  padding: 100px 1rem;
+  padding: 120px 1rem 0 1rem;
 }
 
 .about-container h1 {
  color: #821E36;
  font-weight: 600;
- font-size: 48px;
+ font-size: 2rem;
  margin-bottom: 20px;
 }
 
@@ -328,7 +328,8 @@ body {
 .about p {
   color: #821E36;
   font-size: 24px;
-  margin-bottom: 40px;
+  line-height: 110%;
+  margin-bottom: 20px;
 }
 
 .about .btn {
@@ -350,6 +351,77 @@ body {
   object-fit: cover;
 }
 
+@media screen and (min-width: 700px) {
+  .about p {
+    line-height: 150%;
+  }
+}
+
+/* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
+
+.about2 {
+  height: auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #f3efef;
+  background-size: cover;
+  background-position: center;
+  color: #080707;
+}
+.about2-container {
+  padding: 100px 1rem;
+}
+
+.about2-container h1 {
+ color: #821E36;
+ font-weight: 600;
+ font-size: 2rem;
+ padding-top: 20px;
+ margin-bottom: 20px;
+}
+
+.about2 hr {
+  width: 3rem;
+}
+
+.about2 h3 {
+  color:#977018;
+  margin-bottom: 20px;
+}
+
+.about2 p {
+  color: #821E36;
+  font-size: 24px;
+  margin-bottom: 40px;
+}
+
+.about2.btn {
+  background-color: rgb(53, 7, 19);
+  color: aliceblue;
+  padding: 15px 30px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.about2 .btn:hover {
+  background-color: #444;
+  color: #fff;
+}
+
+.about2 .picture img {
+  margin: 2rem 0;
+  width: 300px;
+  object-fit: cover;
+}
+@media screen and (min-width: 700px) {
+  .about2-container {
+    padding: 100px 1rem 0 1rem;
+  }
+  
+}
+
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 .services {
   background-color: white;
@@ -362,7 +434,7 @@ body {
 
 .services-container {
   display: flex;
-  padding: 100px 1rem;
+  padding: 120px 0 1rem 0;
   flex-wrap: wrap;
 }
 
@@ -370,14 +442,9 @@ body {
   width: 100%;
 }
 
-/* color: #821E36;
-font-weight: 600;
-font-size: 48px;
-margin-bottom: 20px; */
-
 .services h1 {
   width: 100%;
-  font-size: 48px;
+  font-size: 2rem;
   text-align: center;
   margin-bottom: 30px;
   color: #821E36;
@@ -419,10 +486,72 @@ margin-bottom: 20px; */
   }
 }
 
-
-
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 
+.servics {
+  background-color: white;
+  color: rgb(53, 7, 19);
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.servics-container {
+  display: flex;
+  padding: 0 0 100px 0;
+  flex-wrap: wrap;
+}
+
+.heading {
+  width: 100%;
+}
+
+.servics h1 {
+  width: 100%;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #821E36;
+  font-weight: 600;
+
+}
+
+.servics .servic {
+  flex-basis: calc(33.33% - 40px);
+  margin: 20px;
+  padding: 20px;
+  text-align: center;
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.servics .servic img {
+  width: 70px;
+  height: 100px;
+  margin-bottom: 10px;
+}
+
+.servics .servic h3 {
+  margin-bottom: 10px;
+  color: black;
+  font-weight: 500;
+  font-family: Montserrat;
+}
+
+.servics .servic p {
+  font-family: Montserrat;
+  color: #821E36;
+}
+
+@media (max-width: 600px) {
+  .servics .servic {
+    flex-basis: 90%;
+  }
+}
+
+/* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 .contact {
   height: auto;
   display: flex;
@@ -482,7 +611,7 @@ form {
 }
 
 .contact h1 {
-  font-size: 48px;
+  font-size: 2rem;
   margin-bottom: 20px;
 }
 
